# meilisync

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yml  conftest.py  meilisync-healthcheck.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pypi.yml
meilisync/: discover.py  enums.py  event.py  main.py  meili.py  plugin.py  schemas.py  settings.py  version.py  yaml_parser.py
meilisync/progress/: __init__.py  file.py  redis.py
meilisync/source/: __init__.py  mongo.py  mysql.py  postgres.py
tests/: test_mongo.py  test_mysql.py  test_postgres.py
tests/config/: mongo.yml  mysql.yml  postgres.yml
