[tool.poetry]
authors = ["long2ice <long2ice@gmail.com>"]
description = "Realtime sync data from MySQL/PostgreSQL/MongoDB to meilisearch"
documentation = "https://github.com/meilisync/meilisync"
include = ["CHANGELOG.md", "LICENSE", "README.md"]
keywords = ["meilisearch", "postgres", "mysql"]
license = "Apache-2.0"
name = "meilisync"
packages = [
  {include = "meilisync"},
]
readme = "README.md"
repository = "https://github.com/meilisync/meilisync.git"
version = "0.1.1"

[tool.poetry.dependencies]
aiofiles = "*"
asyncmy = {version = "*", optional = true}
loguru = "*"
meilisearch-python-async = "*"
motor = {version = "*", optional = true}
psycopg2-binary = {version = "*", optional = true}
python = "^3.9"
pyyaml = "*"
redis = "*"
sentry-sdk = "*"
typer = {version = "*", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-custom-exit-code = "*"
ruff = "*"
types-aiofiles = "*"
types-pyyaml = "*"
types-redis = "*"

[tool.poetry.extras]
all = ["asyncmy", "redis", "psycopg2-binary", "motor", "sentry-sdk"]
mongodb = ["motor"]
mysql = ["asyncmy"]
postgres = ["psycopg2-binary"]
redis = ["redis"]
sentry = ["sentry-sdk"]

[tool.poetry.scripts]
meilisync = "meilisync.main:app"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.mypy]
ignore_missing_imports = true
pretty = true

[tool.ruff]
line-length = 100
